--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-thai-address-input": "^0.2.1",
+    "vue-thailand-address": "^2.0.2",
+    "vue-thailand-address-autocomplete": "0.0.8",
+    "vuetify": "^1.1.13",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
